# mcp-rag-server

./: .env.example  .gitignore  README.md  prompt.txt  pyproject.toml
app/: main.py
app/components/: _old_main.py  config.py  ft_api.py  server.py  vector_store.py
vector_store/: index.faiss  index.pkl
