[tool.poetry]
name = "mcp-rag-server"
version = "0.1.0"
description = "A simple PDF RAG application using FastMCP, Ollama, and Langchain"
authors = ["Dario <your-email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^2.0.0"
langchain = "^0.1.16"
langchain-community = "^0.0.32"
langchain-core = "^0.1.42"
pypdf = "^4.0.1"
faiss-cpu = "^1.8.0"
python-dotenv = "^1.0.1"
ollama = "^0.2.0"
uvicorn = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"