[tool.poetry]
name = "mcp-rag-server"
version = "0.1.0"
description = "A simple PDF RAG application using FastMCP, Ollama, and Langchain"
authors = ["Dario <your-email@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastmcp = "^0.1.0"
langchain-core = "^0.3.52"
langchain = "^0.3.0"
langchain-ollama = "^0.3.2"
ollama = "^0.4.4"
pypdf = "^4.0.1"
faiss-cpu = "^1.8.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.27.0"
dotenv = "^0.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
